<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
	<string name="app_name" translatable="false">Harbor</string>
	<string name="app_package" translatable="false">org.briarproject.briar.android</string>
	<string name="setup_title">Welcome to Harbor</string>
	<string name="setup_name_explanation">Your nickname will be shown next to any content you post. You can\'t change it after creating your account.</string>
	<string name="setup_next">Next</string>
	<string name="setup_password_intro">Choose a Password</string>
	<string name="setup_password_explanation">Your Harbor account is stored encrypted on your device, not in the cloud. If you forget your password or uninstall Harbor, there\'s no way to recover your account.\n\nChoose a long password that\'s hard to guess, such as four random words, or ten random letters, numbers and symbols.</string>
	<string name="dnkm_doze_intro">To receive messages, Harbor needs to stay connected in the background.</string>
	<string name="dnkm_doze_explanation">To receive messages, Harbor needs to stay connected in the background. Please disable battery optimizations so Harbor can stay connected.</string>
	<string name="choose_nickname">Choose your nickname</string>
	<string name="choose_password">Choose your password</string>
	<string name="confirm_password">Confirm your password</string>
	<string name="name_too_long">Name is too long</string>
	<string name="password_too_weak">Password is too weak</string>
	<string name="password_quite_strong">Password is okay</string>
	<string name="password_strong">Password is strong</string>
	<string name="passwords_do_not_match">Passwords do not match</string>
	<string name="create_account_button">Create Account</string>
	<string name="more_info">More Information</string>
	<string name="don_t_ask_again">Don\'t ask again</string>
	<string name="dnkm_huawei_protected_text">Please tap the button below and make sure Briar is protected in the \"Protected Apps\" screen.</string>
	<string name="dnkm_huawei_protected_button">Protect Briar</string>
	<string name="dnkm_huawei_protected_help">If Briar is not added to the protected apps list, it will be unable to run in the background.</string>
	<string name="dnkm_huawei_app_launch_text">Please tap the button below, open the \"App launch\" screen and make sure Briar is set to \"Manage manually\".</string>
	<string name="dnkm_huawei_app_launch_help">If Briar is not set to \"Manage manually\" in the \"App launch\" screen, it will not be able to run in the background.</string>
	<string name="dnkm_xiaomi_text">To run in the background, Briar needs to be locked to the recent apps list.</string>
	<string name="dnkm_xiaomi_button">Protect Briar</string>
	<string name="dnkm_xiaomi_help">If Briar is not locked to the recent apps list, it will be unable to run in the background.</string>
	<string name="dnkm_xiaomi_dialog_body_old">1. Open the recent apps list (also called the app switcher)\n\n2. Swipe down on the image of Briar to show the padlock icon\n\n3. If the padlock is not locked, tap to lock it</string>
	<string name="dnkm_xiaomi_dialog_body_new">1. Open the recent apps list (also called the app switcher)\n\n2. If Briar has a small image of a padlock next to its name then you don\'t need to do anything\n\n3. If there\'s no padlock, press and hold the image of Briar until the padlock button appears, then tap it</string>
	<string name="dnkm_xiaomi_lock_apps_text">Please tap the button below to open the security settings. Tap \"Boost speed\", then tap \"Lock apps\", and make sure Briar is set to \"Locked\".</string>
	<string name="dnkm_xiaomi_lock_apps_help">If Briar is not set to \"Locked\" in the \"Lock apps\" screen, it will be unable to run in the background.</string>
	<string name="dnkm_warning_dozed_1">Briar was unable to run in the background</string>
	<string name="enter_password">Password</string>
	<string name="try_again">Wrong password, try again</string>
	<string name="dialog_title_cannot_check_password">Cannot Check Password</string>
	<string name="dialog_message_cannot_check_password">Harbor cannot check your password. Please try rebooting your device to solve this problem.</string>
	<string name="sign_in_title">Sign into Harbor</string>
	<string name="sign_in_button">Sign In</string>
	<string name="forgotten_password">Forgot your password?</string>
	<string name="telegram_connector_login_button">Continue with Telegram</string>
	<string name="telegram_connector_login_title">Telegram login</string>
	<string name="telegram_connector_login_message">Telegram login is staged for internal Harbor testing. TDLib currently expects a Telegram phone number, and Harbor password sign-in remains the active path in this build.</string>
	<string name="expiry_date_reached">This software has expired.\nThank you for testing!</string>
	<string name="download_briar">To continue using Harbor, please download the latest release.</string>
	<string name="create_new_account">You will need to create a new account, but you can use the same nickname.</string>
	<string name="download_briar_button">Download Latest Release</string>
	<string name="contact_list_button">Contacts</string>
	<string name="groups_button">Private Groups</string>
	<string name="forums_button">Forums</string>
	<string name="blogs_button">Blogs</string>
	<string name="lock_button">Lock App</string>
	<string name="settings_button">Settings</string>
	<string name="sign_out_button">Sign Out</string>
	<string name="set_contact_alias">Change contact name</string>
	<string name="menu_item_disappearing_messages">Disappearing messages</string>
	<string name="delete_all_messages">Delete all messages</string>
	<string name="delete_contact">Delete contact</string>
	<string name="menu_contact">Contact</string>
	<string name="introduction_menu_item">Make Introduction</string>
	<string name="menu_item_connect_via_bluetooth">Connect via Bluetooth</string>
	<string name="groups_member_list">Member List</string>
	<string name="groups_invite_members">Invite Members</string>
	<string name="groups_leave">Leave Group</string>
	<string name="groups_dissolve">Dissolve Group</string>
	<string name="groups_reveal_contacts">Reveal Contacts</string>
	<string name="display_settings_title">Display</string>
	<string name="network_settings_title">Connections</string>
	<string name="bluetooth_setting">Connect to contacts via Bluetooth</string>
	<string name="wifi_setting">Connect to contacts on the same Wi-Fi network</string>
	<string name="tor_enable_title">Connect to contacts via the Internet</string>
	<string name="tor_enable_summary">All connections go through the Tor network for privacy</string>
	<string name="tor_network_setting">Connection method for Tor network</string>
	<string name="tor_mobile_data_title">Use mobile data</string>
	<string name="tor_only_when_charging_title">Connect to the Internet only when charging</string>
	<string name="tor_only_when_charging_summary">Disables Internet connection when device is running on battery</string>
	<string name="security_settings_title">Security</string>
	<string name="pref_lock_title">App lock</string>
	<string name="pref_lock_summary">Use the device\'s screen lock to protect Briar while signed in</string>
	<string name="pref_lock_timeout_title">App lock inactivity timeout</string>
	<string name="pref_lock_timeout_summary">When not using Briar, automatically lock it after %s</string>
	<string name="change_password">Change password</string>
	<string name="panic_setting">Panic button setup</string>
	<string name="panic_setting_title">Panic button</string>
	<string name="panic_setting_hint">Configure how Briar will react when you use a panic button app</string>
	<string name="panic_app_setting_title">Panic Button App</string>
	<string name="panic_app_setting_summary">No app has been set</string>
	<string name="panic_setting_destructive_action">Destructive Actions</string>
	<string name="panic_setting_signout_title">Sign Out</string>
	<string name="panic_setting_signout_summary">Sign out of Briar if a panic button is pressed</string>
	<string name="purge_setting_title">Delete Account</string>
	<string name="purge_setting_summary">Delete your Briar account if a panic button is pressed. Caution: This will permanently delete your identities, contacts and messages</string>
	<string name="notification_settings_title">Notifications</string>
	<string name="notify_sign_in_title">Remind me to sign in</string>
	<string name="notify_sign_in_summary">Show a reminder when the phone starts or the app has been updated</string>
	<string name="notify_private_messages_setting_title">Private messages</string>
	<string name="notify_private_messages_setting_summary">Show alerts for private messages</string>
	<string name="notify_group_messages_setting_title">Group messages</string>
	<string name="notify_group_messages_setting_summary">Show alerts for group messages</string>
	<string name="notify_forum_posts_setting_title">Forum posts</string>
	<string name="notify_forum_posts_setting_summary">Show alerts for forum posts</string>
	<string name="notify_blog_posts_setting_title">Blog posts</string>
	<string name="notify_blog_posts_setting_summary">Show alerts for blog posts</string>
	<string name="notify_vibration_setting">Vibrate</string>
	<string name="notify_sound_setting">Sound</string>
	<string name="mailbox_status_check_button">Check Connection</string>
	<string name="mailbox_status_unlink_button">Unlink</string>
	<string name="mailbox_error_wizard_question1">Do you have access to your Mailbox device?</string>
	<string name="mailbox_error_wizard_answer1">Yes, I have access to it right now.</string>
	<string name="mailbox_error_wizard_answer2">Not right now, but I can get access to it later.</string>
	<string name="mailbox_error_wizard_answer3">No, I no longer have access to it.</string>
	<string name="mailbox_error_wizard_info1_1">Check that the Mailbox device is turned on and connected to the Internet.</string>
	<string name="mailbox_error_wizard_question1_1">Open the Mailbox app. What do you see?</string>
	<string name="mailbox_error_wizard_answer1_1">I see instructions for setting up the Mailbox</string>
	<string name="mailbox_error_wizard_answer1_2">I see a QR code</string>
	<string name="mailbox_error_wizard_answer1_3">I see \"Mailbox is running\"</string>
	<string name="mailbox_error_wizard_answer1_4">I see \"Device offline\"</string>
	<string name="mailbox_error_wizard_info1_1_1">Please unlink your Mailbox using the button below, then follow the instructions on the Mailbox device to link it again.</string>
	<string name="mailbox_error_wizard_info_1_1_2">Please unlink your Mailbox using the button below, then scan the QR code to link it again.</string>
	<string name="mailbox_error_wizard_info1_1_3">Please use the button below to check the connection between Briar and the Mailbox.\n\n
		If the connection fails again:\n
		\u2022 Check that the Mailbox and Briar apps are updated to the latest version.\n
		\u2022 Restart your Mailbox and Briar devices and try again.</string>
	<string name="mailbox_error_wizard_info1_1_4">Check that the mailbox device is properly connected to the Internet.\n\nCheck that the clock on the Mailbox device shows the right time, date and timezone.\n\nCheck that the Mailbox and Briar apps are updated to the latest version.\n\nRestart your Mailbox and Briar devices and try again.</string>
	<string name="mailbox_error_wizard_info2">Please come back to this screen when you have access to the device.</string>
	<string name="mailbox_error_wizard_info3">Please unlink your mailbox using the button below.\n\nAfter unlinking your old Mailbox, you can set up a new Mailbox at any time.</string>
	<string name="send_feedback">Send feedback</string>
	<string name="removable_drive_menu_title">Connect via Removable Drive</string>
</resources>