<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<SwitchPreferenceCompat
		android:defaultValue="true"
		android:key="pref_key_notify_sign_in"
		android:summary="@string/notify_sign_in_summary"
		android:title="@string/notify_sign_in_title"
		app:iconSpaceReserved="false"
		app:singleLineTitle="false" />

	<SwitchPreferenceCompat
		android:defaultValue="true"
		android:enabled="false"
		android:key="notifyPrivateMessages"
		android:persistent="false"
		android:summary="@string/notify_private_messages_setting_summary"
		android:title="@string/notify_private_messages_setting_title"
		app:iconSpaceReserved="false"
		app:singleLineTitle="false" />

	<SwitchPreferenceCompat
		android:defaultValue="true"
		android:enabled="false"
		android:key="notifyGroupMessages"
		android:persistent="false"
		android:summary="@string/notify_group_messages_setting_summary"
		android:title="@string/notify_group_messages_setting_title"
		app:iconSpaceReserved="false"
		app:singleLineTitle="false" />

	<SwitchPreferenceCompat
		android:defaultValue="true"
		android:enabled="false"
		android:key="notifyForumPosts"
		android:persistent="false"
		android:summary="@string/notify_forum_posts_setting_summary"
		android:title="@string/notify_forum_posts_setting_title"
		app:iconSpaceReserved="false"
		app:singleLineTitle="false" />

	<SwitchPreferenceCompat
		android:defaultValue="true"
		android:enabled="false"
		android:key="notifyBlogPosts"
		android:persistent="false"
		android:summary="@string/notify_blog_posts_setting_summary"
		android:title="@string/notify_blog_posts_setting_title"
		app:iconSpaceReserved="false"
		app:singleLineTitle="false" />

	<SwitchPreferenceCompat
		android:defaultValue="true"
		android:enabled="false"
		android:key="notifyVibration"
		android:persistent="false"
		android:title="@string/notify_vibration_setting"
		app:iconSpaceReserved="false"
		app:singleLineTitle="false" />

	<Preference
		android:key="notifySound"
		android:title="@string/notify_sound_setting"
		app:iconSpaceReserved="false" />

</PreferenceScreen>
